@@ -1,46 +1,0 @@
-/*
- * (c) Copyright Object Computing, Incorporated. 2005,2010. All rights reserved.
- */
-package org.opendds.modeling.diagram.policylib.edit.parts;
-
-import org.eclipse.gmf.runtime.diagram.ui.editparts.DiagramEditPart;
-import org.eclipse.gmf.runtime.diagram.ui.editpolicies.EditPolicyRoles;
-import org.eclipse.gmf.runtime.notation.View;
-import org.opendds.modeling.diagram.policylib.edit.policies.PolicyLibCanonicalEditPolicy;
-import org.opendds.modeling.diagram.policylib.edit.policies.PolicyLibItemSemanticEditPolicy;
-
-/**
- * @generated
- */
-public class PolicyLibEditPart extends DiagramEditPart {
-
-	/**
-	 * @generated
-	 */
-	public final static String MODEL_ID = "OpenDDS PolicyLib"; //$NON-NLS-1$
-
-	/**
-	 * @generated
-	 */
-	public static final int VISUAL_ID = 1000;
-
-	/**
-	 * @generated
-	 */
-	public PolicyLibEditPart(View view) {
-		super(view);
-	}
-
-	/**
-	 * @generated
-	 */
-	protected void createDefaultEditPolicies() {
-		super.createDefaultEditPolicies();
-		installEditPolicy(EditPolicyRoles.SEMANTIC_ROLE,
-				new PolicyLibItemSemanticEditPolicy());
-		installEditPolicy(EditPolicyRoles.CANONICAL_ROLE,
-				new PolicyLibCanonicalEditPolicy());
-		// removeEditPolicy(org.eclipse.gmf.runtime.diagram.ui.editpolicies.EditPolicyRoles.POPUPBAR_ROLE);
-	}
-
-}
